--- a/giovane/paginas/bomba.html
+++ b/giovane/paginas/bomba.html
@@ -10,14 +10,14 @@
 			<img src="../img/logo.png" height="120">
 		</div>
 		<nav id="menu">
-			<ul>
-				<li><a href="../index.html" id="menu1">Início</a></li>
-				<li><a href="../paginas/mapas.html" id="menu2">Mapas</a></li>
-				<li><a href="../paginas/desenvolvedor.html" id="menu3">Desenvolvedor</a></li>
-				<li><a href="../paginas/bomba.html" id="menu4">Bomba</a></li>
-				<li><a href="../paginas/comp.html" id="menu5">Cenario Competitivo</a></li>
-				<li><a href="../paginas/skins.html" id="menu6">Skins</a></li>
-				<li><a href="../paginas/referencias.html" id="menu7">Referências</a></li>
+			<ul class="menu">
+				<li><a href="../index.html" id="menu1" class="menu">Início</a></li>
+				<li><a href="../paginas/mapas.html" id="menu2" class="menu">Mapas</a></li>
+				<li><a href="../paginas/desenvolvedor.html" id="menu3" class="menu">Desenvolvedor</a></li>
+				<li><a href="../paginas/bomba.html" id="menu4" class="menu">Bomba</a></li>
+				<li><a href="../paginas/comp.html" id="menu5" class="menu">Cenario Competitivo</a></li>
+				<li><a href="../paginas/skins.html" id="menu6" class="menu">Skins</a></li>
+				<li><a href="../paginas/referencias.html" id="menu7" class="menu">Referências</a></li>
 			</ul>
 		</nav>
 			<div id="content">
