--- a/giovane/index.html
+++ b/giovane/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="icon" type="image/png" sizes="16x16" href="imagens/favicon-16x16.png">
+		<link rel="stylesheet" type="text/css" href="../style.css">
 		<title>CS:GO</title>		
 	</head>
 	<body>
