--- a/giovane/paginas/desenvolvedor.html
+++ b/giovane/paginas/desenvolvedor.html
@@ -3,23 +3,24 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="icon" type="image/png" sizes="64x64" href="../img/favicon.png">
+		<link rel="stylesheet" type="text/css" href="../../style.css">
 		<title>CS:GO</title>		
 	</head>
 	<body>
 		<div id="logo">
 			<img src="../img/logo.png" height="120">
 		</div>
-		<nav id="menu">
+		<div id="menu" class="menu">
 			<ul>
-				<li><a href="../index.html" id="menu1">Início</a></li>
-				<li><a href="../paginas/mapas.html" id="menu2">Mapas</a></li>
-				<li><a href="../paginas/desenvolvedor.html" id="menu3">Desenvolvedor</a></li>
-				<li><a href="../paginas/bomba.html" id="menu4">Bomba</a></li>
-				<li><a href="../paginas/comp.html" id="menu5">Cenario Competitivo</a></li>
-				<li><a href="../paginas/skins.html" id="menu6">Skins</a></li>
-				<li><a href="../paginas/referencias.html" id="menu7">Referências</a></li>
+				<li><a href="../index.html" id="menu1" class="menu">Início</a></li>
+				<li><a href="../paginas/mapas.html" id="menu2" class="menu">Mapas</a></li>
+				<li><a href="../paginas/desenvolvedor.html" id="menu3" class="menu">Desenvolvedor</a></li>
+				<li><a href="../paginas/bomba.html" id="menu4" class="menu">Bomba</a></li>
+				<li><a href="../paginas/comp.html" id="menu5" class="menu">Cenario Competitivo</a></li>
+				<li><a href="../paginas/skins.html" id="menu6" class="menu">Skins</a></li>
+				<li><a href="../paginas/referencias.html" id="menu7" class="menu">Referências</a></li>
 			</ul>
-		</nav>
+		</div>
 			<div id="content">
 			<h2></h2>
 				<p>Counter-Strike: Global Offensive é a sequência do popular jogo de tiro em primeira pessoa Counter-Strike: Source, desenvolvido pela Valve. O desenvolvimento da Global Offensive começou quando a Hidden Path Entertainment tentou transportar Counter-Strike: Source para os consoles de videogame antes do final de sua vida útil. Durante seu desenvolvimento, a Valve viu a oportunidade de transformar a porta em um jogo completo e expandir a jogabilidade do antecessor. A Ofensiva Global iniciou o desenvolvimento em março de 2010 e foi revelada ao público em 12 de agosto de 2011. A versão beta fechada começou em 30 de novembro de 2011 e foi inicialmente restrita a cerca de dez mil pessoas que receberam uma chave em eventos destinados a exibir a Ofensiva Global . Depois que os problemas com a estabilidade do cliente e do servidor foram resolvidos, o beta foi aberto para um número cada vez maior de pessoas e, na E3 2012, a Valve anunciou que o Global Offensive seria lançado em 21 de agosto de 2012, com o beta aberto iniciando aproximadamente um mês antes. Antes da versão beta pública, a Valve convidou jogadores profissionais de Counter-Strike para testar o jogo e dar feedback.</p>
