--- a/giovane/paginas/comp.html
+++ b/giovane/paginas/comp.html
@@ -3,14 +3,15 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="icon" type="image/png" sizes="64x64" href="../img/favicon.png">
+		<link rel="stylesheet" type="text/css" href="../../style.css">
 		<title>CS:GO</title>		
 	</head>
 	<body>
 		<div id="logo">
 			<img src="../img/logo.png" height="120">
 		</div>
-		<nav id="menu">
-			<ul class="menu">
+		<div id="menu" class="menu">
+			<ul>
 				<li><a href="../index.html" id="menu1" class="menu">Início</a></li>
 				<li><a href="../paginas/mapas.html" id="menu2" class="menu">Mapas</a></li>
 				<li><a href="../paginas/desenvolvedor.html" id="menu3" class="menu">Desenvolvedor</a></li>
@@ -19,7 +20,7 @@
 				<li><a href="../paginas/skins.html" id="menu6" class="menu">Skins</a></li>
 				<li><a href="../paginas/referencias.html" id="menu7" class="menu">Referências</a></li>
 			</ul>
-		</nav>
+		</div>
 			<div id="content">
 			<h2></h2>
 				<p>O cenário profissional de Ofensiva Global consiste em torneios organizados por organizações de terceiros e torneios organizados ou co-patrocinados pela Valve, referidos como Majors. Os principais têm prêmios maiores; originalmente fixado em US $ 250.000, os prêmios para maiores aumentaram, com o MLG Columbus 2016 tendo o primeiro conjunto de US $ 1.000.000.</p>
