--- a/giovane/paginas/referencias.html
+++ b/giovane/paginas/referencias.html
@@ -9,17 +9,17 @@
 		<div id="logo">
 			<img src="../img/logo.png" height="120">
 		</div>
-		<nav id="menu">
-			<ul class="menuul">
-				<li class="menuli"><a href="../index.html" id="menu1">Início</a></li>
-				<li class="menuli"><a href="../paginas/mapas.html" id="menu2">Mapas</a></li>
-				<li class="menuli"><a href="../paginas/desenvolvedor.html" id="menu3">Desenvolvedor</a></li>
-				<li class="menuli"><a href="../paginas/bomba.html" id="menu4">Bomba</a></li>
-				<li class="menuli"><a href="../paginas/comp.html" id="menu5">Cenario Competitivo</a></li>
-				<li class="menuli"><a href="../paginas/skins.html" id="menu6">Skins</a></li>
-				<li class="menuli"><a href="../paginas/referencias.html" id="menu7">Referências</a></li>
+		<div id="menu">
+			<ul>
+				<li class="menu"><a href="../index.html" id="menu1" class="menu">Início</a></li>
+				<li class="menu"><a href="../paginas/mapas.html" id="menu2" class="menu">Mapas</a></li>
+				<li class="menu"><a href="../paginas/desenvolvedor.html" id="menu3" class="menu">Desenvolvedor</a></li>
+				<li class="menu"><a href="../paginas/bomba.html" id="menu4" class="menu">Bomba</a></li>
+				<li class="menu"><a href="../paginas/comp.html" id="menu5" class="menu">Cenario Competitivo</a></li>
+				<li class="menu"><a href="../paginas/skins.html" id="menu6" class="menu">Skins</a></li>
+				<li class="menu"><a href="../paginas/referencias.html" id="menu7" class="menu">Referências</a></li>
 			</ul>
-		</nav>
+		</div>
 			<div id="content">
 			<h2></h2>
 				<ul>
