--- a/giovane/index.html
+++ b/giovane/index.html
@@ -7,11 +7,14 @@
 		<title>CS:GO</title>		
 	</head>
 	<body>
-		<div id="logo">
-			<img src="img/logo.png" height="120">
-		</div>
-		<nav id="menu" class="menu">
+		
+			
+		
+		<div id="menu" class="menu">
+			
 			<ul>
+				<li><div class="logo">
+			<img src="img/logo.png" height="30" style="float: left; margin-bottom: 10px;"></li>
 				<li><a href="index.html" id="menu1" class="menu">Início</a></li>
 				<li><a href="paginas/mapas.html" id="menu2" class="menu">Mapas</a></li>
 				<li><a href="paginas/desenvolvedor.html" id="menu3" class="menu">Desenvolvedor</a></li>
@@ -20,8 +23,9 @@
 				<li><a href="paginas/skins.html" id="menu6" class="menu">Skins</a></li>
 				<li><a href="paginas/referencias.html" id="menu7" class="menu">Referências</a></li>
 			</ul>
-		</nav>
-			<div id="content">
+		</div></div>
+			<div id="content" class="content">
+				<br>
 			<h1>O que é?</h1>
 				<p>Foi lançado no dia 21 de agosto de 2012 para as plataformas Windows e Mac OS X no Steam, Xbox 360 (por meio da Xbox Live Arcade), e uma versão exclusiva para os EUA para PlayStation 3 (por meio da PlayStation Network). A versão de Linux foi lançada em setembro de 2014 (com suporte para o sistema Ubuntu a partir da versão 12.05). O jogo conta com conteúdo clássico de tiro, como versões retrabalhadas de mapas clássicos, bem como novos mapas, personagens e modos de jogo. O sistema multiplayer multi-plataformas foi planejado entre jogadores de Windows, OS X, Linux e PSN, mas acabou excluindo o PSN por causa das diferenças na frequência de atualização dos sistemas. A versão da PSN oferece três formas de controles, que inclui DualShock 3, PlayStation Move e é fizero experimenta.</p>
 				<h2>Pós lançamento</h2>
