--- a/giovane/paginas/bomba.html
+++ b/giovane/paginas/bomba.html
@@ -7,11 +7,11 @@
 		<title>CS:GO</title>		
 	</head>
 	<body>
-		<div id="logo">
-			<img src="../img/logo.png" height="120">
-		</div>
+		
 		<div id="menu" class="menu">
 			<ul>
+				<li><div class="logo">
+			<img src="../img/logo.png" height="30" style="float: left; margin-bottom: 10px;"></div></li>
 				<li><a href="../index.html" id="menu1" class="menu">Início</a></li>
 				<li><a href="../paginas/mapas.html" id="menu2" class="menu">Mapas</a></li>
 				<li><a href="../paginas/desenvolvedor.html" id="menu3" class="menu">Desenvolvedor</a></li>
