--- a/giovane/paginas/skins.html
+++ b/giovane/paginas/skins.html
@@ -3,23 +3,23 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="icon" type="image/png" sizes="64x64" href="../img/favicon.png">
+		<link rel="stylesheet" type="text/css" href="../../style.css">
 		<title>CS:GO</title>		
 	</head>
 	<body>
-		<div id="logo">
-			<img src="../img/logo.png" height="120">
-		</div>
-		<nav id="menu">
+		<div id="menu" class="menu">
 			<ul>
-				<li><a href="../index.html" id="menu1">Início</a></li>
-				<li><a href="../paginas/mapas.html" id="menu2">Mapas</a></li>
-				<li><a href="../paginas/desenvolvedor.html" id="menu3">Desenvolvedor</a></li>
-				<li><a href="../paginas/bomba.html" id="menu4">Bomba</a></li>
-				<li><a href="../paginas/comp.html" id="menu5">Cenario Competitivo</a></li>
-				<li><a href="../paginas/skins.html" id="menu6">Skins</a></li>
-				<li><a href="../paginas/referencias.html" id="menu7">Referências</a></li>
+				<li><div class="logo">
+			<img src="../img/logo.png" height="30" style="float: left; margin-bottom: 10px;"></div></li>
+				<li><a href="../index.html" id="menu1" class="menu">Início</a></li>
+				<li><a href="../paginas/mapas.html" id="menu2" class="menu">Mapas</a></li>
+				<li><a href="../paginas/desenvolvedor.html" id="menu3" class="menu">Desenvolvedor</a></li>
+				<li><a href="../paginas/bomba.html" id="menu4" class="menu">Bomba</a></li>
+				<li><a href="../paginas/comp.html" id="menu5" class="menu">Cenario Competitivo</a></li>
+				<li><a href="../paginas/skins.html" id="menu6" class="menu">Skins</a></li>
+				<li><a href="../paginas/referencias.html" id="menu7" class="menu">Referências</a></li>
 			</ul>
-		</nav>
+		</div>
 			<div id="content">
 			<h2></h2>
 				<p>Skins e cosméticos começaram um mercado paralelo dentro dos mais diversos games multiplayer’s do mundo. Existem diversas formas de você conseguir skins decorativas, seja ela através da compra direta (pelo Mercado Steam, por exemplo), por sorte abrindo caixas, ganhando de um amigo ou de algum passe de batalha – evento – de determinado jogo.</p>
