--- a/giovane/paginas/mapas.html
+++ b/giovane/paginas/mapas.html
@@ -3,14 +3,15 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="icon" type="image/png" sizes="64x64" href="../img/favicon.png">
+		<link rel="stylesheet" type="text/css" href="../../style.css">
 		<title>CS:GO</title>		
 	</head>
 	<body>
-		<div id="logo">
-			<img src="../img/logo.png" height="120">
-		</div>
+		
 		<div id="menu" class="menu">
 			<ul>
+				<li><div class="logo">
+			<img src="../img/logo.png" height="30" style="float: left; margin-bottom: 10px;"></div></li>
 				<li><a href="../index.html" id="menu1" class="menu">Início</a></li>
 				<li><a href="../paginas/mapas.html" id="menu2" class="menu">Mapas</a></li>
 				<li><a href="../paginas/desenvolvedor.html" id="menu3" class="menu">Desenvolvedor</a></li>
