--- a/ryan/index.html
+++ b/ryan/index.html
@@ -13,13 +13,13 @@
 		<hr>
 		<nav class="menu">
 			<ul>
-				<li><a href="index.html" class="menu">Início</a></li>
-				<li><a href="paginas/receita.html" class="menu">Receita</a></li>
-				<li><a href="paginas/historia.html" class="menu">História</a></li>
-				<li><a href="paginas/tipos.html" class="menu">Tipos</a></li>
-				<li><a href="paginas/jogo.html" class="menu">Jogo</a></li>
-				<li><a href="paginas/regras.html" class="menu">Regras</a></li>
-				<li><a href="paginas/referencias.html" class="menu">Referências</a></li>
+				<li class="menu"><a href="index.html" class="menu">Início</a></li>
+				<li class="menu"><a href="paginas/receita.html" class="menu">Receita</a></li>
+				<li class="menu"><a href="paginas/historia.html" class="menu">História</a></li>
+				<li class="menu"><a href="paginas/tipos.html" class="menu">Tipos</a></li>
+				<li class="menu"><a href="paginas/jogo.html" class="menu">Jogo</a></li>
+				<li class="menu"><a href="paginas/regras.html" class="menu">Regras</a></li>
+				<li class="menu"><a href="paginas/referencias.html" class="menu">Referências</a></li>
 			</ul>
 		</nav>
 		<hr>
