--- a/ryan/index.html
+++ b/ryan/index.html
@@ -11,7 +11,7 @@
 			<h1>Cookie é Bom</h1>
 		</div>
 		<hr>
-		<nav class="menu">
+		<div class="menu">
 			<ul>
 				<li class="menu"><a href="index.html" class="menu">Início</a></li>
 				<li class="menu"><a href="paginas/receita.html" class="menu">Receita</a></li>
@@ -21,7 +21,7 @@
 				<li class="menu"><a href="paginas/regras.html" class="menu">Regras</a></li>
 				<li class="menu"><a href="paginas/referencias.html" class="menu">Referências</a></li>
 			</ul>
-		</nav>
+		</div>
 		<hr>
 			<div class="content">
 			<section>
