--- a/giovane/paginas/referencias.html
+++ b/giovane/paginas/referencias.html
@@ -11,7 +11,7 @@
 		<div id="menu" class="menu">
 			<ul>
 				<li><div class="logo">
-			<img src="../img/logo.png" height="30" style="float: left; margin-bottom: 10px;"></div></li>
+			<img src="../img/logo.png" height="30" style="float: left; margin-bottom: 10px; margin: "></div></li>
 				<li class="menu"><a href="../index.html" id="menu1" class="menu">Início</a></li>
 				<li class="menu"><a href="../paginas/mapas.html" id="menu2" class="menu">Mapas</a></li>
 				<li class="menu"><a href="../paginas/desenvolvedor.html" id="menu3" class="menu">Desenvolvedor</a></li>
