UPEI ESSA PORRA CARALHO

--- a/giovane/index.html
+++ b/giovane/index.html
@@ -23,7 +23,8 @@
 				<li><a href="paginas/skins.html" id="menu6" class="menu">Skins</a></li>
 				<li><a href="paginas/referencias.html" id="menu7" class="menu">Referências</a></li>
 			</ul>
-		</div></div>
+		</div>
+	</div>
 			<div id="content" class="content">
 				<br>
 			<h1>O que é?</h1>
