--- a/giovane/paginas/mapas.html
+++ b/giovane/paginas/mapas.html
@@ -21,7 +21,7 @@
 				<li><a href="../paginas/referencias.html" id="menu7" class="menu">Referências</a></li>
 			</ul>
 		</div>
-			<div id="content">
+			<div id="content" class="content">
 				<h1>Mapas</h1>
 				<h2>Principais Mapas</h2>
 					<div class="images">
