--- a/giovane/paginas/bomba.html
+++ b/giovane/paginas/bomba.html
@@ -21,7 +21,7 @@
 				<li><a href="../paginas/referencias.html" id="menu7" class="menu">Referências</a></li>
 			</ul>
 		</div>
-			<div id="content">
+			<div id="content" class="content">
 			<h2></h2>
 				<h3>Planting</h3>
 				<p>Para plantar o C4 como terrorista, é preciso caminhar até um local da bomba (geralmente indicado pelas letras A ou B e quando o ícone C4 e a seta para baixo estiverem piscando), selecione-o usando a tecla [5] e mantendo pressionado o botão [Mouse 1] ou segurando a tecla USE (padrão: [E]), mas apenas na Ofensiva Global.</p>
