--- a/giovane/paginas/skins.html
+++ b/giovane/paginas/skins.html
@@ -20,26 +20,26 @@
 				<li><a href="../paginas/referencias.html" id="menu7" class="menu">Referências</a></li>
 			</ul>
 		</div>
-			<div id="content">
+			<div id="content" class="content">
 			<h2></h2>
 				<p>Skins e cosméticos começaram um mercado paralelo dentro dos mais diversos games multiplayer’s do mundo. Existem diversas formas de você conseguir skins decorativas, seja ela através da compra direta (pelo Mercado Steam, por exemplo), por sorte abrindo caixas, ganhando de um amigo ou de algum passe de batalha – evento – de determinado jogo.</p>
 
 				<p>No CS:GO, as skins sempre foram famosas por darem um charme a mais aos jogadores, ainda mais as skins de faca, que se destacam por ser o único utensílio que realmente muda sua forma dentro do jogo, existindo em vários estilos e com movimentação diferenciada para cada tipo.</p>
 				<p>Pegando como base os principais sites de venda de skins (Neshastore e Bleikstore), podemos listar as skins mais caras do game como sendo:</p>
-				<div class="skin">
+				<div class="images">
 					<h3>Baioneta M9 Doppler Sapphire (Nova de Fábrica) – R$ 21.990,00</h3>
 					<img src="../img/doppler.png" height="250">
 				</div>
-				<div class="skin">
+				<div class="images">
 					<h3>AWP Príncipe (Pouco usada) – R$ 9.899,00</h3>
 					<img src="../img/principe.jpg" height="250">
 				</div>
-				<div class="skin">
+				<div class="images">
 					<h3>AWP Dragon Lore (Testada em campo) – R$ 7.049,00</h3>
 					<img src="../img/dragaoloiro.jpg" height="250">
 				</div>
 				<p>Na Steam, a skin mais cara a venda no momento desta publicação é uma luva degradê, por um preço de R$ 8.763,20.</p>
-				<div class="skin">
+				<div class="images">
 					<h3></h3>
 					<img src="../img/degrade.png" height="250">
 				</div>
