--- a/giovane/paginas/referencias.html
+++ b/giovane/paginas/referencias.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-bt">
+<html lang="pt-br">
 	<head>
 		<meta charset="utf-8">
 		<link rel="icon" type="image/png" sizes="64x64" href="../img/favicon.png">
