--- a/ryan/paginas/referencias.html
+++ b/ryan/paginas/referencias.html
@@ -2,30 +2,29 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="../../style.css">
 		<title>Referências</title>
 		<link rel="icon" type="image/png" sizes="16x16" href="../imagens/favicon-16x16.png">
 	</head>
 	<body>
-		<div class="logo">
-			<h1>Cookie é Bom</h1>
-		</div>
-		<hr>
-		<nav id="menu">
+		<div class="menu">
 			<ul>
-				<li><a href="../index.html">Início</a></li>
-				<li><a href="receita.html">Receita</a></li>
-				<li><a href="historia.html">História</a></li>
-				<li><a href="tipos.html">Tipos</a></li>
-				<li><a href="jogo.html">Jogo</a></li>
-				<li><a href="regras.html">Regras</a></li>
-				<li><a href="referencias.html">Referências</a></li>
+				<li><div class="logo">
+				<img src="../imagens/logo.png" height="50" style="float: left; margin-bottom: 10px;"></li>	
+					<li class="menu"><a href="../index.html" class="menu">Início</a></li>
+					<li class="menu"><a href="receita.html" class="menu">Receita</a></li>
+					<li class="menu"><a href="historia.html" class="menu">História</a></li>
+					<li class="menu"><a href="tipos.html" class="menu">Tipos</a></li>
+					<li class="menu"><a href="jogo.html" class="menu">Jogo</a></li>
+					<li class="menu"><a href="regras.html" class="menu">Regras</a></li>
+					<li class="menu"><a href="referencias.html" class="menu">Referências</a></li>
 			</ul>
-		</nav>
+		</div>
 		<hr>
 		<div class="titulo">
 			<h2>Referências</h2>
 		</div>
-		<div class="referencias">
+		<div class="content">
 			<h3>Textos</h3>	
 				<ul>
 					<li><a href="https://en.wikipedia.org/wiki/Cookie#History" target="_blank">https://en.wikipedia.org/wiki/Cookie#History</a></li>
