--- a/ryan/index.html
+++ b/ryan/index.html
@@ -7,19 +7,17 @@
 		<link rel="icon" type="image/png" sizes="16x16" href="imagens/favicon-16x16.png">
 	</head>
 	<body>
-		<div class="logo">
-			<h1>Cookie é Bom</h1>
-		</div>
-		<hr>
 		<div class="menu">
 			<ul>
-				<li class="menu"><a href="index.html" class="menu">Início</a></li>
-				<li class="menu"><a href="paginas/receita.html" class="menu">Receita</a></li>
-				<li class="menu"><a href="paginas/historia.html" class="menu">História</a></li>
-				<li class="menu"><a href="paginas/tipos.html" class="menu">Tipos</a></li>
-				<li class="menu"><a href="paginas/jogo.html" class="menu">Jogo</a></li>
-				<li class="menu"><a href="paginas/regras.html" class="menu">Regras</a></li>
-				<li class="menu"><a href="paginas/referencias.html" class="menu">Referências</a></li>
+				<li><div class="logo">
+				<img src="imagens/logo.png" height="50" style="float: left; margin-bottom: 10px;"></li>
+					<li class="menu"><a href="index.html" class="menu">Início</a></li>
+					<li class="menu"><a href="paginas/receita.html" class="menu">Receita</a></li>
+					<li class="menu"><a href="paginas/historia.html" class="menu">História</a></li>
+					<li class="menu"><a href="paginas/tipos.html" class="menu">Tipos</a></li>
+					<li class="menu"><a href="paginas/jogo.html" class="menu">Jogo</a></li>
+					<li class="menu"><a href="paginas/regras.html" class="menu">Regras</a></li>
+					<li class="menu"><a href="paginas/referencias.html" class="menu">Referências</a></li>
 			</ul>
 		</div>
 		<hr>
