--- a/giovane/paginas/comp.html
+++ b/giovane/paginas/comp.html
@@ -22,7 +22,7 @@
 			</ul>
 		</div>
 			<div id="content" class="content">
-			<h2></h2>
+			<h2>Cenario Competitivo</h2>
 				<p>O cenário profissional de Ofensiva Global consiste em torneios organizados por organizações de terceiros e torneios organizados ou co-patrocinados pela Valve, referidos como Majors. Os principais têm prêmios maiores; originalmente fixado em US $ 250.000, os prêmios para maiores aumentaram, com o MLG Columbus 2016 tendo o primeiro conjunto de US $ 1.000.000.</p>
 
 				<p>Em 2014, ocorreu o "primeiro escândalo de fixação de grandes partidas" na comunidade Ofensiva Global, onde a equipe iBuyPower propositalmente perdeu uma partida contra o NetCodeGuides.com. A equipe foi posteriormente banida pela Valve, embora a ESL tenha banido a equipe de seus torneios em 2017. Eles ainda não podem jogar em Majors.</p>
