--- a/giovane/paginas/desenvolvedor.html
+++ b/giovane/paginas/desenvolvedor.html
@@ -22,7 +22,7 @@
 			</ul>
 		</div>
 			<div id="content" class="content">
-			<h2></h2>
+			<h2>Desenvolvedor</h2>
 				<p>Counter-Strike: Global Offensive é a sequência do popular jogo de tiro em primeira pessoa Counter-Strike: Source, desenvolvido pela Valve. O desenvolvimento da Global Offensive começou quando a Hidden Path Entertainment tentou transportar Counter-Strike: Source para os consoles de videogame antes do final de sua vida útil. Durante seu desenvolvimento, a Valve viu a oportunidade de transformar a porta em um jogo completo e expandir a jogabilidade do antecessor. A Ofensiva Global iniciou o desenvolvimento em março de 2010 e foi revelada ao público em 12 de agosto de 2011. A versão beta fechada começou em 30 de novembro de 2011 e foi inicialmente restrita a cerca de dez mil pessoas que receberam uma chave em eventos destinados a exibir a Ofensiva Global . Depois que os problemas com a estabilidade do cliente e do servidor foram resolvidos, o beta foi aberto para um número cada vez maior de pessoas e, na E3 2012, a Valve anunciou que o Global Offensive seria lançado em 21 de agosto de 2012, com o beta aberto iniciando aproximadamente um mês antes. Antes da versão beta pública, a Valve convidou jogadores profissionais de Counter-Strike para testar o jogo e dar feedback.</p>
 				<div class="images">
 					<img src="../img/hidden.png"><img src="../img/valve.png" height="75" style="margin-top: 20px;">
