--- a/giovane/paginas/referencias.html
+++ b/giovane/paginas/referencias.html
@@ -22,7 +22,7 @@
 			</ul>
 		</div>
 			<div id="content" class="content">
-			<h2></h2>
+			<h2>Referencias</h2>
 				<ul>
 					<li><a href="https://liquipedia.net/counterstrike/Portal:Maps" class="nolinkurl">https://liquipedia.net/counterstrike/Portal:Maps</a></li>
 					<li><a href="https://en.wikipedia.org/wiki/Counter-Strike:_Global_Offensive#Professional_competition" class="nolinkurl">https://en.wikipedia.org/wiki/Counter-Strike:_Global_Offensive#Professional_competition</a></li>
