--- a/giovane/paginas/skins.html
+++ b/giovane/paginas/skins.html
@@ -21,7 +21,7 @@
 			</ul>
 		</div>
 			<div id="content" class="content">
-			<h2></h2>
+			<h2>Skins</h2>
 				<p>Skins e cosméticos começaram um mercado paralelo dentro dos mais diversos games multiplayer’s do mundo. Existem diversas formas de você conseguir skins decorativas, seja ela através da compra direta (pelo Mercado Steam, por exemplo), por sorte abrindo caixas, ganhando de um amigo ou de algum passe de batalha – evento – de determinado jogo.</p>
 
 				<p>No CS:GO, as skins sempre foram famosas por darem um charme a mais aos jogadores, ainda mais as skins de faca, que se destacam por ser o único utensílio que realmente muda sua forma dentro do jogo, existindo em vários estilos e com movimentação diferenciada para cada tipo.</p>
