--- a/ryan/paginas/receita.html
+++ b/ryan/paginas/receita.html
@@ -25,6 +25,7 @@
 			<h2>Receita</h2>
 			<p>Aqui estará uma receita do original Cookie americano (Pode confiar, aprovado pela Palmirinha (God))</p>
 				<h3>Ingredientes</h3>
+				<div class="content">
 				<ul>
 					<li>2 Xícaras (chá) de manteiga</li><br>
 					<li>2 Xícaras (chá) de açúcar</li><br>
@@ -40,6 +41,7 @@
 					<li>3 Xícaras (chá) de nozes picadas</li><br>
 					<li>1 kg de chips (gotas) de chocolate meio amargo (ou pique em cubinhos)</li><br>
 				</ul>
+				</div>
 			<h2>Modo de Preparo</h2>
 				<ol>
 					<li>Na batedeira, bata a manteiga com os açúcares até formar um creme. Adicione os ovos e a baunilha e bata até esbranquiçar. Sem bater, incorpore os demais ingredientes até ficar uniforme.</li> <br>
