--- a/ryan/paginas/regras.html
+++ b/ryan/paginas/regras.html
@@ -26,7 +26,7 @@
 			<p>Só tem 2 regras existentes:</p>
 			<p>Tem um Cookie? Então o <strong>COMA!!!</strong></p> <br>
 			<p>Não tem um Cookie mas encontrou um? Okay não se desespere, e siga a imagem a seguir:</p>
-				<img src="../imagens/imagem01.jpeg" alt="Fluxograma ao encontrar Cookie">
+				<img src="../imagens/imagem01.jpeg" alt="Fluxograma ao encontrar Cookie" class="images">
 				<figcaption>Fluxograma ao encontrar um Cookie</figcaption>
 		</div>
 	</body>
