--- a/ryan/index.html
+++ b/ryan/index.html
@@ -26,15 +26,15 @@
 					<p>Um Cookie (burramente chamado de biscoito) é um alimento assado que normalmente é pequeno, plano e doce. Geralmente contém farinha, açúcar e algum tipo de óleo ou gordura. Podendo conter algum recheio</p>
 					<p>Os Cookies são frequentemente servidos com bebidas como leite, café e as vezes até mesmo chá, sendo comum serem "embebidos", uma abordagem que libera mais sabor das confecções dissolvendo os açúcares, enquanto suaviza sua textura. Pode incluir outros ingredientes, como passas, aveia, pedaços de chocolate, nozes, etc.</p>
 					<figure>
-						<img src="imagens/imagem04.jpg" alt="Cookie" width="250" height="200">
+						<img src="imagens/imagem04.jpg" alt="Cookie" width="250" height="200" class="images">
 						<figcaption>Exemplo de um Cookie</figcaption>
 					</figure>
 					<figure>
-						<img src="imagens/imagem02.jpg" alt="Cookie" width="250" height="200">
+						<img src="imagens/imagem02.jpg" alt="Cookie" width="250" height="200" class="images">
 						<figcaption>Exemplo 2 de um Cookie</figcaption>
 					</figure>
 					<figure>
-						<img src="imagens/imagem03.jpg" alt="Cookie" width="250" height="200">
+						<img src="imagens/imagem03.jpg" alt="Cookie" width="250" height="200" class="images">
 						<figcaption>Exemplo de vários Cookies</figcaption>
 					</figure>
 			</div>
