--- a/ryan/paginas/referencias.html
+++ b/ryan/paginas/referencias.html
@@ -27,22 +27,22 @@
 		<div class="content">
 			<h2>Textos</h2>	
 				<ul>
-					<li><a href="https://en.wikipedia.org/wiki/Cookie#History" target="_blank">https://en.wikipedia.org/wiki/Cookie#History</a></li>
-					<li><a href="https://pt.wikipedia.org/wiki/Cookie_Clicker" target="_blank">https://pt.wikipedia.org/wiki/Cookie_Clicker</a></li>
-					<li><a href="https://anamariabraga.globo.com/receita/verdadeiro-cookie-americano/">https://anamariabraga.globo.com/receita/verdadeiro-cookie-americano/</a></li>
+					<li><a href="https://en.wikipedia.org/wiki/Cookie#History" target="_blank" class="nolinkurl">https://en.wikipedia.org/wiki/Cookie#History</a></li>
+					<li><a href="https://pt.wikipedia.org/wiki/Cookie_Clicker" target="_blank" class="nolinkurl">https://pt.wikipedia.org/wiki/Cookie_Clicker</a></li>
+					<li><a href="https://anamariabraga.globo.com/receita/verdadeiro-cookie-americano/" target="_blank" class="nolinkurl">https://anamariabraga.globo.com/receita/verdadeiro-cookie-americano/</a></li>
 				</ul>
 			<h2>Imagens</h2>
 				<ul>
-					<li><a href="https://www.instagram.com/cookie_stories/?hl=pt-br" target="_blank">https://www.instagram.com/cookie_stories/?hl=pt-br</a></li>
+					<li><a href="https://www.instagram.com/cookie_stories/?hl=pt-br" target="_blank" class="nolinkurl">https://www.instagram.com/cookie_stories/?hl=pt-br</a></li>
 				</ul>
 			<h2>Vídeos</h2>
 				<ul>
-					<li><a href="https://www.youtube.com/watch?v=8AGX8nI4PBU" target="_blank">https://www.youtube.com/watch?v=8AGX8nI4PBU</a></li>
-					<li><a href="https://www.youtube.com/watch?v=4MRXv0wrJq8" target="_blank">https://www.youtube.com/watch?v=4MRXv0wrJq8</a></li>
+					<li><a href="https://www.youtube.com/watch?v=8AGX8nI4PBU" target="_blank" class="nolinkurl">https://www.youtube.com/watch?v=8AGX8nI4PBU</a></li>
+					<li><a href="https://www.youtube.com/watch?v=4MRXv0wrJq8" target="_blank" class="nolinkurl">https://www.youtube.com/watch?v=4MRXv0wrJq8</a></li>
 				</ul>
 			<h2>Jogo</h2>
 				<ul>
-					<li><a href="https://orteil.dashnet.org/cookieclicker/" target="_blank">https://orteil.dashnet.org/cookieclicker/</a></li>
+					<li><a href="https://orteil.dashnet.org/cookieclicker/" target="_blank" class="nolinkurl">https://orteil.dashnet.org/cookieclicker/</a></li>
 				</ul>
 		</div>
 	</body>
