--- a/ryan/paginas/tipos.html
+++ b/ryan/paginas/tipos.html
@@ -10,7 +10,7 @@
 		<div class="menu">
 			<ul>
 				<li><div class="logo">
-				<img src="../imagens/logo.png" height="50" style="float: left; margin-bottom: 10px;"></li>	
+				<img src="../imagens/logo.png" height="30" style="float: left; margin-bottom: 10px;"></li>	
 					<li class="menu"><a href="../index.html" class="menu">Início</a></li>
 					<li class="menu"><a href="receita.html" class="menu">Receita</a></li>
 					<li class="menu"><a href="historia.html" class="menu">História</a></li>
@@ -21,7 +21,7 @@
 			</ul>
 		</div>
 		<hr>
-		<div class="content">
+		<div class="lista">
 			<h2>Tipos de Cookie</h2>
 		
 		<p>Cookie como o alimento mais importante já criado, certamente que não teria somente um tipo do mesmo,</p>
