--- a/giovane/paginas/referencias.html
+++ b/giovane/paginas/referencias.html
@@ -21,7 +21,7 @@
 				<li class="menu"><a href="../paginas/referencias.html" id="menu7" class="menu">Referências</a></li>
 			</ul>
 		</div>
-			<div id="content" class="content">
+			<div id="content" class="lista">
 			<h2>Referencias</h2>
 				<ul>
 					<li><a href="https://liquipedia.net/counterstrike/Portal:Maps" class="nolinkurl" target="_blank">https://liquipedia.net/counterstrike/Portal:Maps</a></li>
