--- a/ryan/paginas/receita.html
+++ b/ryan/paginas/receita.html
@@ -10,7 +10,7 @@
 		<div class="menu">
 			<ul>
 				<li><div class="logo">
-				<img src="../imagens/logo.png" height="50" style="float: left; margin-bottom: 10px;"></li>	
+				<img src="../imagens/logo.png" height="30" style="float: left; margin-bottom: 10px;"></li>	
 					<li class="menu"><a href="../index.html" class="menu">Início</a></li>
 					<li class="menu"><a href="receita.html" class="menu">Receita</a></li>
 					<li class="menu"><a href="historia.html" class="menu">História</a></li>
@@ -21,11 +21,11 @@
 			</ul>
 		</div>
 		<hr>
-		<div class="content">
+		<div class="lista">
 			<h2>Receita</h2>
 			<p>Aqui estará uma receita do original Cookie americano (Pode confiar, aprovado pela Palmirinha (God))</p>
 				<h3>Ingredientes</h3>
-				<div class="content">
+				<div class="lista">
 				<ul>
 					<li>2 Xícaras (chá) de manteiga</li><br>
 					<li>2 Xícaras (chá) de açúcar</li><br>
