--- a/ryan/paginas/tipos.html
+++ b/ryan/paginas/tipos.html
@@ -21,9 +21,10 @@
 			</ul>
 		</div>
 		<hr>
+		<div class="content">
+			<h1>Tipos de Cookie</h1>
+		</div>
 		<div class="lista">
-			<h2>Tipos de Cookie</h2>
-		
 		<p>Cookie como o alimento mais importante já criado, certamente que não teria somente um tipo do mesmo,</p>
 		<p>Aqui vai uma lista de alguns tipos de Cookie:</p>
 			<ul>
