--- a/ryan/paginas/receita.html
+++ b/ryan/paginas/receita.html
@@ -21,11 +21,12 @@
 			</ul>
 		</div>
 		<hr>
-		<div class="lista">
-			<h2>Receita</h2>
+		<div class="content">
+			<h1>Receita</h1>
+		</div>
+			<div class="lista">
 			<p>Aqui estará uma receita do original Cookie americano (Pode confiar, aprovado pela Palmirinha (God))</p>
-				<h3>Ingredientes</h3>
-				<div class="lista">
+				<h2>Ingredientes</h2>
 				<ul>
 					<li>2 Xícaras (chá) de manteiga</li><br>
 					<li>2 Xícaras (chá) de açúcar</li><br>
@@ -41,14 +42,14 @@
 					<li>3 Xícaras (chá) de nozes picadas</li><br>
 					<li>1 kg de chips (gotas) de chocolate meio amargo (ou pique em cubinhos)</li><br>
 				</ul>
-				</div>
-			<h2>Modo de Preparo</h2>
+				<h2>Modo de Preparo</h2>
 				<ol>
 					<li>Na batedeira, bata a manteiga com os açúcares até formar um creme. Adicione os ovos e a baunilha e bata até esbranquiçar. Sem bater, incorpore os demais ingredientes até ficar uniforme.</li> <br>
 					<li>Modele bolinhas com cerca de 1 colher de sopa da massa (uns 32 g) e disponha em assadeiras forradas com papel-manteiga, mantendo 5 cm de distância uma da outra (os cookies se expandem).</li><br>
 					<li>Leve ao forno médio preaquecido (200 °C) por 10 minutos. Deixe amornar para desenformar e coloque-os para esfriar sobre uma grade. Armazene em potes herméticos para não perderem a crocância.</li> <br>
 					<li>Pulo do gato: O custo total desta receita foi R$ 36,65. No mercado, 200 g dessa mesma receita custava R$ 7,54, ao passo que a nossa saiu por R$ 2,06.Stonks!!!</li>
 				</ol>
+			</div>
 		</div>
 	</body>
 </html>
