--- a/ryan/paginas/referencias.html
+++ b/ryan/paginas/referencias.html
@@ -24,7 +24,7 @@
 		<div class="titulo">
 			<h1>Referências</h1>
 		</div>
-		<div class="content">
+		<div class="lista">
 			<h2>Textos</h2>	
 				<ul>
 					<li><a href="https://en.wikipedia.org/wiki/Cookie#History" target="_blank" class="nolinkurl">https://en.wikipedia.org/wiki/Cookie#History</a></li>
