--- a/ryan/paginas/tipos.html
+++ b/ryan/paginas/tipos.html
@@ -43,7 +43,7 @@
 				<li>Cookie de chocolate branco</li><br>
 			</ul>
 			<p>Gostou de algum e gostaria de fazer? :</p>
-			<a href="https://www.google.com/" target="_blank">https://www.google.com/</a>
+			<a href="https://www.google.com/" target="_blank" class="nolinkurl">https://www.google.com/</a>
 			</div>
 	</body>
 </html>
