--- a/ryan/paginas/receita.html
+++ b/ryan/paginas/receita.html
@@ -37,8 +37,8 @@
 					<li>5 Xícaras (chá) de farinha de aveia (ou bata aveia em flocos no liquidificador)</li><br>
 					<li>1 Colher (café) de sal</li><br>
 					<li>1 Chifre de Unicórnio (Se possível)</li><br>
-					<li>2 Colheres (sopa) de fermento em pó</li><br>
-					<li>2 Colheres (sopa) de bicarbonato de sódio</li><br>
+					<li>2 Colheres (sopa) de fermento em pó (cocaína colombiana)</li><br>
+					<li>2 Colheres (sopa) de bicarbonato de ódio</li><br>
 					<li>3 Xícaras (chá) de nozes picadas</li><br>
 					<li>1 kg de chips (gotas) de chocolate meio amargo (ou pique em cubinhos)</li><br>
 				</ul>
